# Streamchat

./: pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
Data_csv/: Combined Admissions Data.csv
src/Data_pipeline/: index.py
src/Dependencies/: requirements.txt
src/Functions/: functions.py
src/Llm_pipeline/: pipeline.py
src/Main/: main.py
vectorstore/db_faiss/: index.pkl
